Changes to be committed: 	modified:   main.py 	new file:   static/pngwing.png 	modified:   static/styles/ext.css 	modified:   templates/account.html 	new file:   templates/forms.html 	modified:   templates/index.html 	deleted:    templates/student.html 	new file:   templates/tables.html

--- a/static/styles/ext.css
+++ b/static/styles/ext.css
@@ -7818,6 +7818,7 @@ label.panel-block:hover {
 
 .columns.is-mobile>.column.is-full {
     flex: none;
+
     width: 100%
 }
 
@@ -13059,4 +13060,15 @@ print {
 .footer {
     background-color: #fafafa;
     padding: 3rem 1.5rem 6rem
+}
+
+/* User */
+
+.bd-notification.is-primary {
+    background-color: #00d1b2;
+    color: #fff
+}
+.left{
+    text-align: left;
+    margin: 4px 4px 4px 4px;
 }
