--- a/templates/account.html
+++ b/templates/account.html
@@ -18,21 +18,21 @@
                 <div class="column is-4 is-offset-4">
                     <h3 class="title has-text-white">Apna Bank</h3>
                     <hr class="login-hr">
-                    <p class="subtitle has-text-white">Please login to proceed.</p>
+                    <p class="subtitle has-text-white">Customer login page</p>
                     <div class="box">
                         <figure class="avatar">
-                            <img src="https://via.placeholder.com/150" style="border-radius: 50%; width: 100px; height: 100px;">
+                            <img src="{{url_for('static', filename='pngwing.png')}}" style="border-radius: 50%; width: 100px; height: 100px;">
                         </figure>
                         <form action="/acc" method="post">
                             <div class="field">
                                 <div class="control">
-                                    <input class="input is-small" type="text" name="uname" placeholder="Your Account Number" autofocus="">
+                                    <input class="input is-small" type="text" name="uname" placeholder="Your Account Number" autofocus="" required>
                                 </div>
                             </div>
 
                             <div class="field">
                                 <div class="control">
-                                    <input class="input is-small" type="password" name="upass" placeholder="Your Password">
+                                    <input class="input is-small" type="password" name="upass" placeholder="Your Password" required>
                                 </div>
                             </div>
                             
