modified:   database.py 	modified:   main.py 	modified:   static/styles/ext.css 	new file:   templates/emplogin.html 	renamed:    templates/dashboard.html -> templates/udashboard.html 	renamed:    templates/login.html -> templates/userlogin.html
Changes not staged for commit:
	modified:   main.py

--- a/templates/udashboard.html
+++ b/templates/udashboard.html
@@ -26,10 +26,12 @@
           </div>
         </nav>
 
+          <!-- Account Statement -->
+
         <div class="card">
           <header class="card-header">
             <p class="card-header-title">
-              Component
+              Account Number : {{adetails[0][0]}}
             </p>
             <button class="card-header-icon" aria-label="more options">
               <span class="icon">
@@ -38,32 +40,41 @@
             </button>
           </header>
           <div class="card-content left">
-            <div class="content">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris.
-              <a href="#">@bulmaio</a>. <a href="#">#css</a> <a href="#">#responsive</a>
+            <div class="columns is-desktop">
+              <div class="column">
+                <b>Branch Name : </b> {{bdetails[0][2]}} <br>
+                <b>Branch Address : </b>{{bdetails[0][1]}}<br>
+                <b>IFSC Code : </b> {{bdetails[0][3]}}
+              </div>
+              <div class="column">
+                <b>Customer Name : </b> {{adetails[0][1]}}  <br>
+                <b>Customer Addres : </b> {{adetails[0][3]}}<br>
+                <b>Account Type : </b> {{adetails[0][5]}}
+              </div>
             </div>
           </div>
           <footer class="card-footer">
-            <a href="#" class="card-footer-item">Save</a>
+            <a href="#" class="card-footer-item ">Save</a>
             <a href="#" class="card-footer-item">Edit</a>
             <a href="#" class="card-footer-item">Delete</a>
+            <p class="card-footer-item">It was popularised in the 1960s with the release of Letraset sheets containing </p>
           </footer>
         </div>
 
-        <!-- Message bar -->
+              <!-- Message bar -->
 
         <article class="message is-primary">
           <div class="message-header">
-            <p>Primary</p>
-            <button class="delete" aria-label="delete"></button>
+            <p>Account statement</p>
+            <!-- <button class="delete" aria-label="delete"></button> -->
           </div>
           <div class="message-body">
             
             <!-- Html Tables -->
-            <table class="table">
+            <table class="table center">
               <thead>
                 <tr>
-                  <th><abbr title="Transaction_date">Tr. Date</abbr></th>
+                  <th><abbr title="Transaction_date">Transaction Date</abbr></th>
                   <th><abbr title="Withdrawal">Withdrawal</abbr></th>
                   <th><abbr title="Deposit">Deposit</abbr></th>
                   <th><abbr title="Lost">Balance</abbr></th>
