--- a/static/styles/ext.css
+++ b/static/styles/ext.css
@@ -13072,3 +13072,8 @@ print {
     text-align: left;
     margin: 4px 4px 4px 4px;
 }
+
+.center{
+    margin-left: auto;
+    margin-right: auto;
+}
