--- a/templates/accopen.html
+++ b/templates/accopen.html
@@ -5,9 +5,6 @@
 	rel="stylesheet" href=
 "static/styles/ext.css"
 	/>
-	<!-- <script src=
-"https://use.fontawesome.com/releases/v5.15.4/js/all.js">
-	</script> -->
 </head>
 <body>
 	<div class="container box p-6
@@ -19,11 +16,11 @@
 	<h2 class="subtitle has-text-centered">
 		Sign Up Form
 	</h2>
-	<form action="">
+	<form action="/data" method="post">
 		<div class="field">
 		<label class="label">Full Name</label>
 		<div class="control">
-			<input class="input" type="text"
+			<input name="uname" class="input" type="text"
 				placeholder="Enter your name" required/>
 		</div>
 		</div>
@@ -32,7 +29,7 @@
 		<label class="label">Address</label>
 		<div class="control has-icons-left
 					has-icons-right">
-			<input
+			<input name="uadd"
 			class="input is-success"
 			type="text"
 			placeholder="Enter your Address" required
@@ -48,7 +45,7 @@
 		<label class="label">Password</label>
 		<div class="control has-icons-left
 					has-icons-right">
-			<input
+			<input name="upass"
 			class="input is-danger"
 			type="password"
 			placeholder="Enter your password" required
@@ -107,7 +104,7 @@
 		<div class="field">
 		<div class="control">
 			<label class="checkbox">
-			<input type="checkbox" />
+			<input type="checkbox" required />
 			I agree to the <a href="#">
 			terms and conditions
 			</a>
@@ -118,14 +115,14 @@
 
 		<div class="field is-grouped">
 		<div class="control">
-			<a href="{{url_for('userlogin')}}" class="button is-success">
-			Sign up
-            </a>
+	
+			<input href="{{url_for('accounts')}}" class="button is-success" type="submit" value="Submit">
+		
 		</div>
 		<div class="control">
-			<button class="button is-link is-light">
+			<a href="{{url_for('edashboard')}}" class="button is-link is-light">
 			Cancel
-			</button>
+			</a>
 		</div>
 		</div>
 	</form>
