Changes to be committed: 	modified:   database.py 	modified:   main.py 	new file:   requirements.txt 	new file:   templates/credit_msg.html 	new file:   templates/debit_msg.html 	modified:   templates/deposit.html 	modified:   templates/edashboard.html 	deleted:    templates/message.html 	modified:   templates/utransaction.html

--- a/templates/deposit.html
+++ b/templates/deposit.html
@@ -28,7 +28,7 @@
                             Cash Deposit
                           </div>
 
-                        <form action="/data" method="post">
+                        <form action="{{url_for('credit_msg')}}" method="post">
                             
                             <div class="field">
                                 <div class="control">
