--- a/templates/edashboard.html
+++ b/templates/edashboard.html
@@ -55,7 +55,7 @@
           </div>
           <footer class="card-footer">
             <a href="{{url_for('accounts')}}" class="card-footer-item">New Account</a>
-            <a href="/deposit" class="card-footer-item">Cash Deposit</a>
+            <a href="{{url_for('deposit')}}" class="card-footer-item">Cash Deposit</a>
             <a href="/utr" class="card-footer-item">Customer</a>
             <a href="/dropsession" class="card-footer-item">Logout</a>
           </footer>
