--- a/templates/deposit.html
+++ b/templates/deposit.html
@@ -21,7 +21,7 @@
                     <p class="subtitle has-text-white">Bank payment page</p>
                     <div class="box">
                         <figure class="avatar">
-                            <img src="{{url_for('static', filename='pngwing.png')}}" style="border-radius: 50%; width: 100px; height: 100px;">
+                            <img src="{{url_for('static', filename='cash-94.png')}}" style="border-radius: 50%; width: 100px; height: 100px;">
                         </figure>
 
                         <div class="notification is-primary">
@@ -64,7 +64,7 @@
                         </form>
                     </div>
                     <p class="has-text-grey">
-                        <a href="{{url_for('edashboard')}}">Cancel
+                        <a href="{{url_for('edashboard')}}">Return to Dashboard
                         </a>
                         <!-- <a href="../">Forgot Password</a> &nbsp;·&nbsp;
                         <a href="../">Need Help?</a> -->
