--- a/templates/edashboard.html
+++ b/templates/edashboard.html
@@ -15,7 +15,7 @@
         <nav class="navbar is-fixed-top">
           <div class="navbar-brand">
             <a class="navbar-item" href="https://bulma.io">
-              <img src="https://bulma.io/images/bulma-logo.png" alt="Bulma: Free, open source, and modern CSS framework based on Flexbox" width="112" height="28">
+              <img src="static\Group 1.png" alt="Bulma: Free, open source, and modern CSS framework based on Flexbox" width="112" height="28">
             </a>
         
             <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
