--- a/templates/edashboard.html
+++ b/templates/edashboard.html
@@ -56,7 +56,7 @@
           <footer class="card-footer">
             <a href="{{url_for('accounts')}}" class="card-footer-item">New Account</a>
             <a href="{{url_for('deposit')}}" class="card-footer-item">Cash Deposit</a>
-            <a href="/utr" class="card-footer-item">Customer</a>
+            <a href="{{url_for('customer')}}" class="card-footer-item">Customer</a>
             <a href="/dropsession" class="card-footer-item">Logout</a>
           </footer>
         </div>
