Changes to be committed: 	new file:   README.md 	new file:   bank_sql_database/bank_account_login.sql 	new file:   bank_sql_database/bank_accounts.sql 	new file:   bank_sql_database/bank_branch.sql 	new file:   bank_sql_database/bank_cards.sql 	new file:   bank_sql_database/bank_employee.sql 	new file:   bank_sql_database/bank_tranaction.sql 	modified:   database.py 	modified:   main.py 	modified:   requirements.txt 	modified:   templates/debit_msg.html 	modified:   templates/edashboard.html 	modified:   templates/udashboard.html

--- a/templates/debit_msg.html
+++ b/templates/debit_msg.html
@@ -55,8 +55,7 @@
 
 
 
-                        <a href="history.back()">Cancel
-                        </a>
+                        <a href="{{url_for('udashboard')}}">Return to Dashboard </a>
                        
                     </p>
                 </div>
