--- a/templates/udashboard.html
+++ b/templates/udashboard.html
@@ -14,8 +14,8 @@
         
         <nav class="navbar is-fixed-top">
           <div class="navbar-brand">
-            <a class="navbar-item" href="#">
-              <img src="https://bulma.io/images/bulma-logo.png" alt="Bulma: Free, open source, and modern CSS framework based on Flexbox" width="112" height="28">
+            <a class="navbar-item" href="https://bulma.io">
+              <img src="static\Group 1.png" alt="Apna Bank" width="112" height="28">
             </a>
         
             <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
